--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,10 @@ ext {
     targetSdk = 28
     minSdk = 21
 
-    supportLibVersion = "27.1.1"
+    supportLibVersion = '1.0.0-beta01'
     playServicesAuthVersion = "11.8.0"
-    espressoVersion = "3.0.1"
-    androidTestVersion = "0.5"
+    espressoVersion = '3.1.0-alpha4'
+    androidTestVersion = '1.1.0-alpha4'
     hamcrestVersion = "1.3"
     junitVersion = "4.12"
 }
