--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion rootProject.compileSdk
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.google.samples.apps.topeka"
@@ -44,19 +44,20 @@ android {
             enable true
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-
     implementation "androidx.appcompat:appcompat:$supportLibVersion"
     implementation "com.google.android.material:material:$supportLibVersion"
     implementation "androidx.recyclerview:recyclerview:$supportLibVersion"
     implementation "androidx.test.espresso:espresso-idling-resource:$espressoVersion"
-
     implementation "com.google.android.gms:play-services-auth:$playServicesAuthVersion"
-
     testImplementation "junit:junit:$junitVersion"
-
     androidTestImplementation("androidx.test.espresso:espresso-core:$espressoVersion") {
         exclude module: "espresso-idling-resource"
         exclude group: "com.android.support"
@@ -69,11 +70,9 @@ dependencies {
     androidTestImplementation("androidx.test:rules:$androidTestVersion") {
         exclude group: "com.android.support"
     }
-
     androidTestImplementation("androidx.test:runner:$androidTestVersion") {
         exclude group: "com.android.support"
     }
-
     androidTestImplementation "org.hamcrest:hamcrest-core:$hamcrestVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
