Action Create an instant-enable app bundle
Reference
https://developer.android.com/topic/google-play-instant/getting-started/instant-enabled-app-bundle

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,10 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.google.samples.apps.topeka">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:dist="http://schemas.android.com/apk/distribution"
+    package="com.google.samples.apps.topeka">
+    <dist:module dist:instant="true" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:allowBackup="false"
