Action prepare upload key and keystore

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.google.samples.apps.topeka"
+        applicationId "com.john.samples.apps.topeka"
         minSdkVersion rootProject.minSdk
         targetSdkVersion rootProject.targetSdk
         versionCode 1
