--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,34 +18,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.google.samples.apps.topeka">
+
     <dist:module dist:instant="true" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:allowBackup="false"
-                 android:fullBackupContent="false"
-                 android:hardwareAccelerated="true"
-                 android:icon="@mipmap/ic_launcher"
-                 android:label="@string/app_name"
-                 android:supportsRtl="false"
-                 android:theme="@style/Topeka"
-                 tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
+    <application
+        android:allowBackup="false"
+        android:fullBackupContent="false"
+        android:hardwareAccelerated="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="false"
+        android:theme="@style/Topeka"
+        tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
 
-        <activity android:name=".activity.SignInActivity"
-                  android:theme="@style/Topeka.SignInActivity"
-                  android:windowSoftInputMode="adjustPan">
+        <activity
+            android:name=".activity.SignInActivity"
+            android:theme="@style/Topeka.SignInActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http"
+                    android:host="presentation-abbce.firebaseapp.com" />
+                <data android:scheme="https"
+                    android:host="presentation-abbce.firebaseapp.com" />
+            </intent-filter>
+            <meta-data
+                android:name="default-url"
+                android:value="https://presentation-abbce.firebaseapp.com" />
         </activity>
 
-        <activity android:name=".activity.CategorySelectionActivity"
-                  android:theme="@style/Topeka.CategorySelectionActivity" />
+        <activity
+            android:name=".activity.CategorySelectionActivity"
+            android:theme="@style/Topeka.CategorySelectionActivity" />
 
-        <activity android:name=".activity.QuizActivity"
-                  android:launchMode="singleTop"
-                  android:windowSoftInputMode="adjustPan"
-                  android:theme="@style/Topeka.QuizActivity"/>
+        <activity
+            android:name=".activity.QuizActivity"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/Topeka.QuizActivity" />
 
     </application>
 </manifest>
