--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,13 @@ android {
         versionCode 7
         versionName "1.3"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        resConfigs "en"
     }
 
     buildTypes {
         release {
+            shrinkResources true
+            minifyEnabled true
         }
     }
 
