--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,11 @@
-<!--
-  ~ Copyright 2017 Google Inc.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:dist="http://schemas.android.com/apk/distribution"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.google.samples.apps.topeka">
 
     <dist:module dist:instant="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -31,40 +17,50 @@
         android:supportsRtl="false"
         android:theme="@style/Topeka"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
-
         <activity
             android:name=".activity.SignInActivity"
             android:theme="@style/Topeka.SignInActivity"
             android:windowSoftInputMode="adjustPan">
+            <tools:validation testUrl="http://presentation-abbce.firebaseapp.com" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter android:autoVerify="true">
+
+            <meta-data
+                android:name="default-url"
+                android:value="https://presentation-abbce.firebaseapp.com" />
+
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="http"
-                    android:host="presentation-abbce.firebaseapp.com" />
-                <data android:scheme="https"
+                <data
+                    android:scheme="http"
                     android:host="presentation-abbce.firebaseapp.com" />
             </intent-filter>
-            <meta-data
-                android:name="default-url"
-                android:value="https://presentation-abbce.firebaseapp.com" />
-        </activity>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="presentation-abbce.firebaseapp.com" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activity.CategorySelectionActivity"
             android:theme="@style/Topeka.CategorySelectionActivity" />
-
         <activity
             android:name=".activity.QuizActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/Topeka.QuizActivity" />
-
+            android:theme="@style/Topeka.QuizActivity"
+            android:windowSoftInputMode="adjustPan" />
     </application>
+
 </manifest>
