--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ ext {
     targetSdk = 28
     minSdk = 21
 
+    instantAppsVer = '1.1.0'
+    playcore = '1.4.0'
     supportLibVersion = '1.0.0-beta01'
     playServicesAuthVersion = "11.8.0"
     espressoVersion = '3.1.0-alpha4'
